use quinn::{ClientConfig, Endpoint};
use rustls::pki_types::{CertificateDer, ServerName, UnixTime};
use std::sync::Arc;
use std::net::SocketAddr;
use bytes::Bytes;
use tracing::{debug, error, info};

use crate::{
    client::ClientConfig as GhostClientConfig,
    ghost::chain::v1::{DomainQuery, DomainResponse},
    GhostBridgeError, client::Result,
};

pub struct QuicTransport {
    endpoint: Endpoint,
    server_addr: SocketAddr,
}

impl QuicTransport {
    pub async fn new(config: &GhostClientConfig) -> Result<Self> {
        let server_addr: SocketAddr = config.endpoint
            .trim_start_matches("http://")
            .trim_start_matches("https://")
            .parse()
            .map_err(|e| GhostBridgeError::Config(format!("Invalid endpoint: {}", e)))?;

        // Configure QUIC client
        let client_config = configure_client();
        
        let mut endpoint = Endpoint::client("0.0.0.0:0".parse().unwrap())
            .map_err(|e| GhostBridgeError::Config(format!("Failed to create endpoint: {}", e)))?;
        
        endpoint.set_default_client_config(client_config);

        info!("QUIC transport initialized for {}", server_addr);

        Ok(Self {
            endpoint,
            server_addr,
        })
    }

    pub async fn resolve_domain(
        &self,
        domain: String,
        record_types: Vec<String>,
    ) -> Result<DomainResponse> {
        debug!("Resolving domain {} via QUIC", domain);
        
        // Connect to server
        let connection = self.endpoint
            .connect(self.server_addr, "ghostbridge")
            .map_err(|e| GhostBridgeError::Config(format!("Failed to connect: {}", e)))?
            .await?;

        // Open bidirectional stream
        let (mut send, mut recv) = connection.open_bi().await?;

        // Serialize request
        let request = DomainQuery {
            domain,
            record_types,
        };
        
        let request_bytes = serialize_domain_query(&request)?;
        
        // Send request
        send.write_all(&request_bytes).await
            .map_err(GhostBridgeError::QuicWrite)?;
        send.finish()
            .map_err(GhostBridgeError::QuicClosed)?;

        // Read response
        let response_bytes = recv.read_to_end(1024 * 1024).await
            .map_err(GhostBridgeError::QuicRead)?;

        // Deserialize response
        let response = deserialize_domain_response(&response_bytes)?;

        Ok(response)
    }

    pub async fn stream_blocks(&self) -> Result<impl futures::Stream<Item = Result<crate::BlockResponse>>> {
        let connection = self.endpoint
            .connect(self.server_addr, "ghostbridge")
            .map_err(|e| GhostBridgeError::Config(format!("Failed to connect: {}", e)))?
            .await?;

        let (mut send, recv) = connection.open_bi().await?;

        // Send subscription request
        send.write_all(b"SUBSCRIBE_BLOCKS").await
            .map_err(GhostBridgeError::QuicWrite)?;
        send.finish()
            .map_err(GhostBridgeError::QuicClosed)?;

        // Return stream wrapper
        Ok(QuicBlockStream { recv })
    }
}

struct QuicBlockStream {
    recv: quinn::RecvStream,
}

impl futures::Stream for QuicBlockStream {
    type Item = Result<crate::BlockResponse>;

    fn poll_next(
        self: std::pin::Pin<&mut Self>,
        cx: &mut std::task::Context<'_>,
    ) -> std::task::Poll<Option<Self::Item>> {
        // Implementation would decode incoming block messages
        std::task::Poll::Pending
    }
}

fn configure_client() -> ClientConfig {
    // For development, accept self-signed certificates
    let crypto = rustls::ClientConfig::builder()
        .dangerous()
        .with_custom_certificate_verifier(Arc::new(SkipServerVerification))
        .with_no_client_auth();

    ClientConfig::new(Arc::new(
        quinn::crypto::rustls::QuicClientConfig::try_from(crypto).unwrap()
    ))
}

#[derive(Debug)]
struct SkipServerVerification;

impl rustls::client::danger::ServerCertVerifier for SkipServerVerification {
    fn verify_server_cert(
        &self,
        _end_entity: &CertificateDer<'_>,
        _intermediates: &[CertificateDer<'_>],
        _server_name: &ServerName<'_>,
        _ocsp_response: &[u8],
        _now: UnixTime,
    ) -> std::result::Result<rustls::client::danger::ServerCertVerified, rustls::Error> {
        Ok(rustls::client::danger::ServerCertVerified::assertion())
    }

    fn verify_tls12_signature(
        &self,
        _message: &[u8],
        _cert: &CertificateDer<'_>,
        _dss: &rustls::DigitallySignedStruct,
    ) -> std::result::Result<rustls::client::danger::HandshakeSignatureValid, rustls::Error> {
        Ok(rustls::client::danger::HandshakeSignatureValid::assertion())
    }

    fn verify_tls13_signature(
        &self,
        _message: &[u8],
        _cert: &CertificateDer<'_>,
        _dss: &rustls::DigitallySignedStruct,
    ) -> std::result::Result<rustls::client::danger::HandshakeSignatureValid, rustls::Error> {
        Ok(rustls::client::danger::HandshakeSignatureValid::assertion())
    }

    fn supported_verify_schemes(&self) -> Vec<rustls::SignatureScheme> {
        vec![
            rustls::SignatureScheme::RSA_PKCS1_SHA256,
            rustls::SignatureScheme::ECDSA_NISTP256_SHA256,
            rustls::SignatureScheme::ED25519,
        ]
    }
}

// Simplified serialization for prototype
fn serialize_domain_query(query: &DomainQuery) -> Result<Vec<u8>> {
    // In production, use proper protobuf serialization
    let json = serde_json::json!({
        "domain": query.domain,
        "record_types": query.record_types,
    });
    
    serde_json::to_vec(&json)
        .map_err(|e| GhostBridgeError::Config(format!("Serialization error: {}", e)))
}

fn deserialize_domain_response(data: &[u8]) -> Result<DomainResponse> {
    // In production, use proper protobuf deserialization
    let json: serde_json::Value = serde_json::from_slice(data)
        .map_err(|e| GhostBridgeError::Config(format!("Deserialization error: {}", e)))?;
    
    Ok(DomainResponse {
        domain: json["domain"].as_str().unwrap_or("").to_string(),
        records: vec![],
        owner_id: json["owner_id"].as_str().unwrap_or("").to_string(),
        signature: vec![],
        timestamp: json["timestamp"].as_u64().unwrap_or(0),
        ttl: json["ttl"].as_u64().unwrap_or(0) as u32,
    })
}